# quro-notebook

./: .gitignore  README.md  pyproject.toml
src/quro_notebook/: assets.py  build.py  cli.py  embedder.py  fetcher.py  file_index.py  metadata_protocol.py  reader.py  renderer.py  schemas.py  search_server.py  writer.py
templates/: app.js  index.html  search.js  theme.css  warm-editorial.css
templates/styles/: default.css  warm-editorial.css
